# QingLuan

./: Base.md  Cargo.toml  DOC.md  README.md
.obsidian/: workspace.json
Note/project/: QingLuan.toml
Note/project/src/: main.qls
src/: main.rs
src/_lib/: base.rs  file.rs  io.rs  mod.rs
src/script/: lava_river.rs  mod.rs  run.rs
