[package]
name = "QingLuanCompile"
version = "0.1.0"
edition = "2021"
authors = [
    "PRC.松蓦箐 <Song_Mojing@outlook.com>"
]

[dependencies]
colored = "3.0.0"
xmltree = "0.11.0"
regex = "1.11.1"
toml = "0.8.20"       # TOML 解析核心库
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"  # 支持反序列化